token for fault tolerance